# rust_lambda_http_test

./: Cargo.toml
src/: main.rs
